# microsoft-python-discord-bot

./: Dockerfile  README.md  config-default.toml  deployment.yaml  pyproject.toml  tox.ini
.github/workflows/: deploy.yml  docker.yml  linting.yml
bot/: __init__.py  bot.py  config.py  logs.py
bot/cogs/: rss.py  utilities.py
