[tool.poetry]
name = "bot"
version = "0.1.0"
description = "Discord bot for the Microsoft Python Discord community"
authors = ["Joseph Banks <joseph@josephbanks.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.3.3"
coloredlogs = "^14.0"
python-dotenv = "^0.13.0"
toml = "^0.10.1"
attrdict = "^2.0.1"
feedparser = "^5.2.1"
babel = "^2.8.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
flake8-annotations = "^2.1.0"

[tool.poetry.scripts]
bot = "bot:start"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
